	* Makefile.in: Regenerated.

2007-09-16  Christan Thalinger  <twisti@complang.tuwien.ac.at>

	* Makefile.am (ICEDTEA_PATCHES): Added
	patches/icedtea-cacao-docs-Makefile.patch.
	* Makefile.in: Regenerated.
	* patches/icedtea-cacao-docs-Makefile.patch: New file.

2007-09-13  Christan Thalinger  <twisti@complang.tuwien.ac.at>

	* patches/icedtea-cacao-instrument-Makefile.patch: New file.

2007-09-13  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Fixed target typo.
	* Makefile.in: Regenerated.

2007-09-12  Christan Thalinger  <twisti@complang.tuwien.ac.at>

	* Makefile.am: Added WITH_CACAO stuff.
	* Makefile.in: Regenerated.
	* acinclude.m4 (AC_CHECK_WITH_CACAO): New function.
	* configure.ac (AC_CHECK_WITH_CACAO): Added.
	* configure: Regenerated.
	* patches/icedtea-cacao-Compiler-gcc-gmk.patch,
	patches/icedtea-cacao-Defs-linux-gmk.patch,
	patches/icedtea-cacao-Platform-gmk.patch,
	patches/icedtea-cacao-Program-gmk.patch,
	patches/icedtea-cacao-java-c.patch,
	patches/icedtea-cacao-jvm-cfg.patch: New file.

2007-09-12  Christan Thalinger  <twisti@complang.tuwien.ac.at>

	* README.cacao: New file.

2007-09-12  Christan Thalinger  <twisti@complang.tuwien.ac.at>

	* Makefile.am (icedtea-debug): Added -debug to target directory,
	as found today by Andrew Haley.
	* Makefile.in: Likewise.

2007-09-12  Christan Thalinger  <twisti@complang.tuwien.ac.at>

	* .hgignore: Added *~.

2007-09-12  Lillian Angel  <langel@redhat.com>

	* AUTHORS: Added Christian Thalinger.

2007-09-12  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Added BUILD_NUMBER to environment. This should be
	updated with each bXX release. Also, added dependency for
	icedtea-debug target.
	* Makefile.in: Regenerate.

2007-09-12  Joshua Sumali  <jsumali@redhat.com>

	* Makefile.am: Fixed error that broke the build.
	* Makefile.in: Regenerated

2007-09-11  Joshua Sumali  <jsumali@redhat.com>

	* patches/icedtea-demos.patch: New File. Patches the sample
	jvmti makefiles.